--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="/Users/mot/Desktop/repositories/CSSE374Project/lib/asm-all-5.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/asm-all-5.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
