--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/asm-all-5.0.4.jar" sourcepath="lib/asm-all-5.0.4.jar"/>
+	<classpathentry kind="lib" path="/Lab2-1/lib/coolest-editor.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
